--- a/FINAL DELIVERABLES/templates/index.html
+++ b/FINAL DELIVERABLES/templates/index.html
@@ -19,7 +19,7 @@
     </style>
     </head>
     <body>
-        <h3> CHRONIC KnameNEY DISEASE PREDICTION </h3>
+        <h3> CHRONIC KIDNEY DISEASE PREDICTION </h3>
         
         <fieldset>
             <legend>Enter your details for Prediction</legend>
