--- a/FINAL DELIVERABLES/templates/index.html
+++ b/FINAL DELIVERABLES/templates/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="wnameth=device-wnameth, initial-scale=1.0" />
-    <title> Early Detection of Chronic Knameney Disease using Machine Leaning </title>
+    <title> Early Detection of Chronic Kidney Disease using Machine Leaning </title>
     <style>
         body{text-align: center;
 }
